replace for smaller images, fix spacing between icons

--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -11,7 +11,7 @@
     }
 }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 768px) {
     .card-name {
         font-size: 5.5rem;
     }
@@ -40,8 +40,8 @@
     }
 
     .footer .icon {
-        font-size: 3rem;
-        padding: 0 1.4rem;
+        font-size: 2.75rem;
+        padding: 0 1rem;
     }
 
     html,
